--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/ssr": "^20.0.0",
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
+    "firebase": "^12.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
